  --------------------------  HepMC-2.06.07  --------------------------

2012-01-09  Lynn Garren

     * remove all VCMakefile.in files
     * Use cmake to build for Windows
     * cmake is now the preferred build method

2012-01-05  Lynn Garren

     * src/GenEvent.cc: fix a typo in error report for GenEvent::use_length_unit
     
     * examples/pythia8: add main31 and main32 from pythia8

2012-01-05  Lynn Garren

     * GenParticle.h, GenVertex.h, PdfInfo.h, SimpleVector.h, SimpleVector.icc:
       Rename local variables to avoid shadowing class variables.
       This problem surfaces when compiling with -Wshadow.

  --------------------------  HepMC-2.06.06  --------------------------

2011-11-09  Lynn Garren

     * add the ability to build with cmake
     * defs.h is neither created nor installed when building with cmake

2011-11-01  Lynn Garren

     * examples: move Pythia and Herwig examples to examples/fio

2011-10-31  Lynn Garren

     * remove fio/PythiaWrapper.cc
     * HepMC/PythiaWrapper.h: HepMC::GenCrossSection getPythiaCrossSection() 
       is now an inline method

2011-10-25  Lynn Garren

     * fio/PythiaWrapper.cc: remove struct definitions

  --------------------------  HepMC-2.06.05  --------------------------
2011-04-21  Lynn Garren

      * HepMC/GenVertex.h: add #include <cstddef> for bug #80400

2011-04-15  Lynn Garren

      * test/testFlow.cc, test/testPrintBug.cc: define units
      * test/*.sh.in: make sure comparisons work for allowed
        momentum and length combinations

  --------------------------  HepMC-2.06.04  --------------------------
2011-01-04  Lynn Garren

      * src/HeavyIon.cc, src/PdfInfo.cc: throw if there is an invalid line type
      * test/testHepMC.cc.in, test/testStreamIO.cc.in, test/testHepMCVarious.input: 
        provoke a problem with HeavyIon  (see bug #76527)

  --------------------------  HepMC-2.06.03  --------------------------
2010-10-22  Lynn Garren
