@@ -24,7 +24,7 @@ macro( _hepmc_fortran_compiler )
     if( ${_my_COMPILER_BASE_VERSION} MATCHES "3" )
        set(F77 "g77")
     else()
-       set(F77 "gfortan")
+       set(F77 "gfortran")
     endif()
   endif(CMAKE_COMPILER_IS_GNUCXX)
   #message(STATUS "F77: ${F77}")
