@@ -1,5 +1,5 @@
 
-HepMC::Version 2.06.07
+HepMC::Version 2.06.08
 HepMC::IO_GenEvent-START_EVENT_LISTING
 E 1 65 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 357 1 2 0 3 3.4560000000000002e-01 9.8595999999999995e-01 9.8563000000000001e-01
 N 3 "0" "second weight name" "weightName" 
