@@ -1,5 +1,5 @@
 
-HepMC::Version 2.06.07
+HepMC::Version 2.06.08
 HepMC::IO_GenEvent-START_EVENT_LISTING
 E 9 51 -1.0000000000000000e+00 -1.0000000000000000e+00 -1.0000000000000000e+00 20 0 309 1 2 0 4 2.3000000000000001e-01 3.4000000000000002e-01 1.1000000000000000e-01 6.5000000000000002e-02
 N 4 "0" "1" "2" "3" 
